new board with more functionality
-board generates to n size (prompted by user at start)
-board built using table, cells stored in a 2d array
-randomize queens button added to add n queens to the board
-board cells hold bool value for queen placement
each cell is clickable, to change bool value to true(place queen) or false(remove queen). n queens allowed on board at a time

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,8 +8,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="board">
+        <div id ="tableDiv"> </div>
+        <div id="buttonDiv">
+            <button id ="backtracking">Backtracking algorithm</button>
+            <button id ="hillclimbing">hill climbing algorithm</button>
+            <button id="randomButton">Randomize Queens</button>
+
         </div>
         <script src="app.js"></script>
+            
     </body>
 </html>
